fix: cranio dashboards revisions (#2824)
* fix: expanded model to allow for automatic generation of provider links; added additional examples

* fix: formatted files

* fix: adjusted graphql request; fixed breadcrumbs label

* fix: ran formatter

* fix: fixed styling on provider links

* fix: revised content and visualizations for overview page

* fix: implemented changes for CLP pages

* feat: implemented color generator; revised styles

* feat: added new images; cropped and compressed

* fix: added new color palette; adjusted layout

* fix: implemented revisions to dashboard

* fix: renamed view

* feat: implemented filters; adjusted chart configurations

* fix: adjusted messages and fixed styling

* fix: added fallback image if target image is not found

* fix: ran formatter

* fix: revised y-axis scale

* fix: resolved tooltip issue where the wrong info was shown

* feat: added 404 page

* fix: changed chart names

* fix: fixed titles; and changed chart types

* fix: update text with new content

* feat: added option for custom color palattes

* fix: renamed attribute and rebuilt docs

* fix: fixed chart types; general revisions

* feat: added downloads page

* feat: added ontology table for files

* feat: finished view; improved error handling for missing data

* fix: adjusted styles; minor text revisions; formatted files

* revised content; fixed chart color palettes; minor styling revisions

* dropped unused import

* reordered footer links

* fix: restructured and rewrote styles for providers list

* formatted file

* feat: added footer; revised general message

* fixed typo

--- a/apps/cranio-public/src/styles/index.scss
+++ b/apps/cranio-public/src/styles/index.scss
@@ -26,11 +26,11 @@
   }
 
   .page-section {
-    &.section-bg-light-blue {
+    &.bg-blue-050 {
       background-color: $blue-050;
     }
 
-    &.section-bg-light-gray {
+    &.bg-gray-050 {
       background-color: $gray-050;
     }
 
@@ -44,6 +44,16 @@
         @include textTransform(bold);
         margin: 0 auto;
         margin-top: 1em;
+      }
+    }
+
+    a,
+    p,
+    li {
+      .heroicons {
+        $size: 18px;
+        width: $size;
+        height: $size;
       }
     }
   }
